--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dk954.github.io/Assignment4",
+  "homepage": "https://machawk1.github.io/Assignment4",
   "name": "info655-dk954",
   "version": "0.1.0",
   "private": true,
